# dual_arm

./: README.md
dual_arm_configure/: CMakeLists.txt  package.xml
dual_arm_configure/config/: dual_arm.ros2_control.xacro  dual_arm.srdf  dual_arm_demo.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
dual_arm_configure/launch/: dual_arm_demo.launch.py  dual_arm_demo_w_ns.launch.py  move_group_w_ns.launch.py
dual_arm_description/: CMakeLists.txt  package.xml
dual_arm_description/meshes/collision/: base_link_simpified.STL  base_link_simplify.STL  link1_right.STL  link2_left.STL  link3_left.STL  link3_right.STL  link7_right.STL
dual_arm_description/meshes/visual/: link1_left.STL  link1_right.STL  link2_left.STL  link2_right.STL  link4_left.STL  link4_right.STL  link5_left.STL  link5_right.STL  link6_left.STL  link6_right.STL  link7_left.STL  link7_right.STL
dual_arm_description/urdf/: dual_arm.urdf.xacro
dual_arm_hardware_interface/: CMakeLists.txt  dual_arm_hardware_interface_plugin.xml  package.xml
dual_arm_hardware_interface/include/dual_arm_hardware_interface/: dual_arm_hardware_interface.hpp  motor_command.hpp  visibility_control.h
dual_arm_hardware_interface/src/: dual_arm_hardware_interface.cpp
