<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dual_arm_hardware_interface</name>
  <version>0.1.0</version>
  <description>dual_arm hardware interface for ROS2</description>
  <maintainer email="mskwok@email.com">mskwok</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>diagnostic_updater</depend>
  
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>

  <depend>ros2_socketcan</depend>
  <depend>ros2_socketcan_msgs</depend>
  <depend>control_msgs</depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control_demo_description</exec_depend>
  <exec_depend>ros2_controllers_test_nodes</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rqt_joint_trajectory_controller</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <build_export_depend>hardware_interface</build_export_depend>
    <build_export_depend>controller_interface</build_export_depend>
    <hardware_interface plugin="${prefix}/dual_arm_hardware_interface_plugin.xml"/>
  </export>
  
</package>